sc/source/filter/oox/pivotcachefragment.cxx
@@ -311,7 +311,7 @@ void PivotCacheRecordsFragment::importPCRecordItem( sal_Int32 nRecId, SequenceIn
         case BIFF12_ID_PCITEM_DOUBLE:   aItem.readDouble( rStrm );  break;
         case BIFF12_ID_PCITEM_DATE:     aItem.readDate( rStrm );    break;
         case BIFF12_ID_PCITEM_BOOL:     aItem.readBool( rStrm );    break;
-        case BIFF12_ID_PCITEM_ERROR:    aItem.readError( rStrm );   break;
+        case BIFF12_ID_PCITEM_ERROR:    aItem.readError( rStrm, getUnitConverter() ); break;
         case BIFF12_ID_PCITEM_INDEX:    aItem.readIndex( rStrm );   break;
         default:    OSL_FAIL( "OoxPivotCacheRecordsFragment::importPCRecordItem - unexpected record" );
     }
